# tap-learndash

./: README.md  meltano.yml  pyproject.toml  tap-learndash.sh  tox.ini
tap_learndash/: auth.py  client.py  streams.py  tap.py
tap_learndash/tests/: __init__.py  test_core.py
