[tool.poetry]
name = "tap-learndash"
version = "0.0.1"
description = "`tap-learndash` is a Singer tap for LearnDash, built with the Meltano SDK for Singer Taps."
authors = ["Alice Leach"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-learndash = 'tap_learndash.tap:TapLearnDash.cli'
